--- a/SmallScreen.Css
+++ b/SmallScreen.Css
@@ -5,21 +5,26 @@ body,header
     width: 100%;
 }
 
+
 h1
 {
     font-size: 25px;
+    position: relative;
+    left: 30px;
 }
+
 
 .info 
 {
-    position: inherit;
+    position: relative;
+    left: 25px;
     font-size: 16px;
 }
 
 div,section 
 {
-    position: relative;
-    right: 150px;
+   position: relative;
+    right: 150px; 
 }
 
 .image 
