Index.html Se agregaron clases para mejorar estilos y se corrigieron los pixeles para el responsive
Small Y MediumScreen.Css
Se movio info y nombre mas al centro y la imagen se coloco estatica a la izquierda

--- a/MediumScreen.Css
+++ b/MediumScreen.Css
@@ -5,6 +5,11 @@ header
     left: 100px;
 }
 
+.main{ 
+    position: relative;
+    right:200px;
+ }
+
 .image-medium 
 {
     position: relative;
@@ -12,11 +17,14 @@ header
 
 .image-medium,img 
 {
-    position: absolute;
+    position: fixed;
     top: 0px;
-    left: 10px;
-    width: 150px;
+    left: 0px;
+    padding-left: 50px;
+    width: 100%;
+    max-width: 100px;
 }
+
 section
 {
     position: relative;
