--- a/SmallScreen.Css
+++ b/SmallScreen.Css
@@ -21,6 +21,11 @@ h1
     font-size: 14px;
 }
 
+.main{ 
+   position: relative;
+   left: 110px;
+}
+
 div,section 
 {
    position: relative;
@@ -38,7 +43,7 @@ div,section
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 90px;
+    max-width: 100px;
 }
 
 section
